--- a/tournament-web-app/src/app/medals-list/medals-list.component.html
+++ b/tournament-web-app/src/app/medals-list/medals-list.component.html
@@ -19,7 +19,7 @@
                     </mat-form-field> 
                 </mat-grid-tile>
             </mat-grid-list>  
-            <quill-editor formControlName="description" placeholder="Descripción de la imagen"></quill-editor>
+            <quill-editor formControlName="description" placeholder="Descripción"></quill-editor>
         }
         @else{
             <mat-grid-list cols="5" rowHeight="7em">
