--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -128,14 +128,21 @@
                     </div>
                 }
                 @if( performances.length == 0){
-                    <a [routerLink]="['/','tournament',tournamentId,'performances']">
-                        <button mat-raised-button color="accent" >Quiero presentarme</button>
-                    </a>
+                    @if( isLoggedIn ){
+                        <a [routerLink]="['/','tournament',tournamentId,'performances']">
+                            <button mat-raised-button color="accent" >Quiero presentarme</button>
+                        </a>                    
+                    }  
+                    @else{                      
+                        <a [routerLink]="['/','loginForm']">
+                            <button mat-raised-button color="accent" >Quiero presentarme</button>
+                        </a>
+                    }
                 }   
 
                 <mat-divider></mat-divider>                              
                 <h2>Programa
-                @if( isAdmin ){    
+                @if( isAdmin || isJuror ){    
                     <a [routerLink]="['/','tournament',tournamentId,'program']">
                     <button mat-button-icon><mat-icon>edit</mat-icon></button>
                 </a>
