fixing colors and numbers

--- a/tournament-web-app/src/app/evaluation-list/evaluation-list.component.html
+++ b/tournament-web-app/src/app/evaluation-list/evaluation-list.component.html
@@ -24,7 +24,7 @@
                     <li>{{ aspect.label }}</li>
                 }
                 @empty{
-                    <li>Por favor adicione aspectos</li>
+                    <li><span class="error-message">Por favor adicione aspectos</span></li>
                 }   
                 </ul>           
             }
