--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -96,7 +96,7 @@
                         <button mat-button-icon><mat-icon>edit</mat-icon></button>
                     </a>
                     </h2>  
-                    @for( j of tournament.jurors; track j){
+                    @for( j of jurorList; track j){
                         <span class="item">{{j.label}}</span>
                     }               
                 }
