--- a/tournament-web-app/src/app/image-loader/image-loader.component.html
+++ b/tournament-web-app/src/app/image-loader/image-loader.component.html
@@ -4,7 +4,7 @@
         <input matInput disabled> 
         <mat-hint>seleccione una imagen</mat-hint>
         @if (error) {
-            <mat-error>{{error}}</mat-error>
+            <div>{{error}}</div>
         }        
         <span>{{progress}}</span>
         <input hidden (change)="selectFile($event)" name="file" #file type="file" >
