--- a/tournament-web-app/src/app/aspect-list/aspect-list.component.html
+++ b/tournament-web-app/src/app/aspect-list/aspect-list.component.html
@@ -7,7 +7,11 @@
 @if( evaluation ){
     <h1>Evaluación: {{evaluation.label}}</h1>
 
-    <h1>Aspectos<button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button></h1>
+    <h2>Aspectos
+        @if( !isAdding && !editingId){
+            <button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button>
+            }
+    </h2>        
     @for(e of getAspectGroups(); track e){
         <mat-card [formGroup]="e">
             <mat-card-content>
