--- a/tournament-web-app/src/app/evaluation-list/evaluation-list.component.html
+++ b/tournament-web-app/src/app/evaluation-list/evaluation-list.component.html
@@ -1,7 +1,11 @@
 <a [routerLink]="'/tournament/'+tournamentId">
     <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 </a>
-<h1>Evaluation<button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button></h1>
+<h1>Evaluation
+    @if( !isAdding && !editingId){
+    <button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button>
+    }
+</h1>
 @for(e of getEvaluationGroups(); track e){
     <mat-card [formGroup]="e">
         <mat-card-content>
