--- a/tournament-web-app/src/app/medals-list/medals-list.component.html
+++ b/tournament-web-app/src/app/medals-list/medals-list.component.html
@@ -1,21 +1,26 @@
 <a [routerLink]="'/tournament/'+tournamentId">
     <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 </a>
-<h1>Medallas<button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button></h1>
-
+<h1>Premios
+    @if( !isAdding && !editingId){
+        <button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button>
+    }</h1>
 @for(e of getGroups(); track e){
     <mat-card [formGroup]="e"> 
         <mat-card-content>
          @if( (isAdding && !e.controls['id'].value) || (e.controls['id'].value == editingId) ){
-            <mat-grid-list cols="5" rowHeight="7em">
-                <mat-grid-tile colspan="4">
+            <mat-grid-list cols="10" rowHeight="6em">
+                <mat-grid-tile colspan="6">
                     <mat-form-field> 
-                        <input matInput placeholder="label" formControlName="label">
+                        <mat-label>Nombre del premio</mat-label>
+                        <input matInput placeholder="Primer lugar" formControlName="label">
                     </mat-form-field>                 
                 </mat-grid-tile>
-                <mat-grid-tile colspan="1">
+                <mat-grid-tile colspan="4">
                     <mat-form-field> 
-                        <input matInput placeholder="calificacion minima" formControlName="minGrade">
+                        <mat-label>Calificacion mínima</mat-label>
+                        <input matInput placeholder="9.0" formControlName="minGrade">
+                        <mat-hint>numero entre 0 y 10</mat-hint>
                     </mat-form-field> 
                 </mat-grid-tile>
             </mat-grid-list>  
