--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -102,7 +102,7 @@
                 }
     
                 <mat-divider></mat-divider>        
-                <h2>Premios
+                <h2>Premiacion
                 @if(isAdmin){
                     <a [routerLink]="['/','tournament',tournamentId,'medals']">
                         <button mat-button-icon><mat-icon>edit</mat-icon></button>
@@ -128,15 +128,17 @@
                     </div>
                 }
                 @if( performances.length == 0){
-                    @if( isLoggedIn ){
-                        <a [routerLink]="['/','tournament',tournamentId,'performances']">
-                            <button mat-raised-button color="accent" >Quiero presentarme</button>
-                        </a>                    
-                    }  
-                    @else{                      
-                        <a [routerLink]="['/','loginForm']">
-                            <button mat-raised-button color="accent" >Quiero presentarme</button>
-                        </a>
+                    @if( !isAdmin ){
+                        @if( isLoggedIn ){
+                            <a [routerLink]="['/','tournament',tournamentId,'performances']">
+                                <button mat-raised-button color="accent" >Quiero presentarme</button>
+                            </a>                    
+                        }  
+                        @else{                      
+                            <a [routerLink]="['/','loginForm']">
+                                <button mat-raised-button color="accent" >Quiero presentarme</button>
+                            </a>
+                        }
                     }
                 }   
 
