--- a/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
+++ b/tournament-web-app/src/app/evaluationgrade-list/evaluationgrade-list.component.html
@@ -22,6 +22,9 @@
                         }                    
                     </mat-grid-tile>
                 }
+                @empty{
+                    <span>no hay examenes encontrados para {{e.label}}</span>
+                }
             }
             @else{
                 <mat-grid-tile>{{e.label}}</mat-grid-tile>
